--- a/app.json
+++ b/app.json
@@ -1,5 +1,4 @@
 {
-  
   "expo": {
     "name": "ticket-app",
     "slug": "ticket-app",
@@ -11,11 +10,13 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "com.brex",
       "infoPlist": {
         "UIViewControllerBasedStatusBarAppearance": true
       }
     },
     "android": {
+      "package": "com.brex",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -37,12 +38,23 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.135662705560-dij18ofncp8trfsabc3m4p74b88qlpkg"
+        }
+      ],
+      "expo-web-browser"
     ],
-    
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "06270ac0-7055-42bd-b4be-340a47bec38a"
+      }
     }
-    
   }
 }
