--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "~53.0.20",
+    "expo": "53.0.22",
     "expo-auth-session": "~6.2.1",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
@@ -60,13 +60,13 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.4",
+    "expo-router": "~5.1.5",
     "expo-secure-store": "~14.2.4",
     "expo-sharing": "^13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.525.0",
     "nativewind": "^4.1.23",
@@ -78,7 +78,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
