--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "^13.13.5",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
